data/all_generated_tests/raw_wast_tests/loop_StackCorruption_354.wast
;; 5. **Test for Mixed Types in Loop Operand Stack**:    - Construct a loop that manipulates mixed types (e.g., integers and floats). Ensure type consistency on the stack before and after the loop.    - **Constraint**: Proper type management and stack type checking during loop iterations.    - **Relation to Stack Corruption**: Mismanagement of different types on the stack can cause data corruption.

(assert_invalid
  (module
    (func $test-mixed-types-loop
      (f32.const 1.0) 
      (i32.const 42)
      (loop (result i32)
        (br_if 0 (i32.const 0))
      )
      (f32.add)
    )
  )
  "type mismatch"
)